added emu7470A emulator engine, added plotter.xrom modified/enhanced comp41 rmo41hx

--- a/configure.ac
+++ b/configure.ac
@@ -52,5 +52,6 @@ AC_CONFIG_FILES([Makefile
                  doc/hardware/Makefile
                  src/Makefile
                  src/lib/Makefile
+                 src/emu7470/Makefile
                  src/progs/Makefile])
 AC_OUTPUT
