--- a/xroms/Makefile.am
+++ b/xroms/Makefile.am
@@ -1,2 +1,2 @@
 xromsdir= $(datadir)/lifutils/xroms
-xroms_DATA=advantage.xrom alpha.xrom cardrdr.xrom devil.xrom hepax.xrom hpil.xrom printer.xrom time.xrom wand.xrom xfn.xrom xio.xrom plotter.xrom
+xroms_DATA=advantage.xrom alpha.xrom cardrdr.xrom devil.xrom hepax.xrom hpil.xrom printer.xrom time.xrom wand.xrom xfn.xrom xio.xrom plotter.xrom xfncx.xrom timecx.xrom
