lifilper add high speed option, distribution changes

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -69,7 +69,7 @@ set(srclist lif_create_entry.c lif_dir_utils.c print_41_data.c scramble_41.c des
 set(inclist lif_create_entry.h lif_dir_utils.h print_41_data.h scramble_41.h descramble_41.h xrom.h modfile.h lif_img.h lif_block.h lif_phy.h)
 if(UNIX)
    if(APPLE)
-      list(APPEND srclist ildisp.c ildrive.c lif_img.c lif_phy_dummy.c)
+      list(APPEND srclist lif_img.c lif_phy_dummy.c)
    else(APPLE)
       list(APPEND srclist ildisp.c ildrive.c lif_img.c lif_phy_linux.c)
    endif(APPLE)
@@ -104,11 +104,9 @@ ENDIF(UNIX)
 include_directories ("src/lib" "${CMAKE_CURRENT_BINARY_DIR}")
 set(srclist lifdir.c lifget.c lifpurge.c liflabel.c lifrename.c liftext.c sdata.c decomp41.c text75.c regs41.c stat41.c key41.c wall41.c wcat41.c lifstat.c sdatabar.c comp41.c barprt.c barps.c rom41er.c er41rom.c prog41bar.c lifput.c textlif.c raw41lif.c lifraw.c rom41hx.c lifinit.c lifpack.c liffix.c lifmod.c lexcat71.c hx41rom.c lifheader.c lifversion.c rom41cat.c)
 if(UNIX)
-   if(APPLE)
-      list(APPEND srclist in71.c out71.c lifilper.c inp41.c outp41.c)
-   else(APPLE)
+   if(NOT APPLE)
       list(APPEND srclist in71.c out71.c lifilper.c inp41.c outp41.c lifimage.c lifdump.c)
-   endif(APPLE)
+   endif(NOT APPLE)
 endif(UNIX)
 if(WIN32)
 endif(WIN32)
