Include lif_phy_linux.c really only on Linux systems
Not just every UNIX system that is not APPLE is really a Linux one.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -68,11 +68,11 @@ set( LIB_HEADERS "" )
 set(srclist lif_create_entry.c lif_dir_utils.c print_41_data.c scramble_41.c descramble_41.c xrom.c modfile.c lif_block.c)
 set(inclist lif_create_entry.h lif_dir_utils.h print_41_data.h scramble_41.h descramble_41.h xrom.h modfile.h lif_img.h lif_block.h lif_phy.h)
 if(UNIX)
-   if(APPLE)
-      list(APPEND srclist lif_img.c lif_phy_dummy.c)
-   else(APPLE)
+   if(CMAKE_SYSTEM_NAME EQUAL "Linux")
       list(APPEND srclist lif_img.c lif_phy_linux.c)
-   endif(APPLE)
+   else()
+      list(APPEND srclist lif_img.c lif_phy_dummy.c)
+   endif()
 endif(UNIX)
 if(WIN32)
    list(APPEND srclist lif_img_win.c getline.c getopt.c lif_phy_dummy.c)
