renamed text75 to liftext75, added textlif75, build system and doku fixes

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,7 @@
 #
 project(lifutils)
 cmake_minimum_required (VERSION 2.8.4)
+enable_testing()
 #
 # tweaks for Microsoft Visual C: 
 # - link VC runtime statically
@@ -105,7 +106,7 @@ ENDIF(UNIX)
 # build all other executables
 #
 include_directories ("src/lib" "${CMAKE_CURRENT_BINARY_DIR}")
-set(srclist lifdir.c lifget.c lifpurge.c liflabel.c lifrename.c liftext.c sdata.c decomp41.c text75.c regs41.c stat41.c key41.c wall41.c wcat41.c lifstat.c sdatabar.c comp41.c barprt.c barps.c rom41er.c er41rom.c prog41bar.c lifput.c textlif.c raw41lif.c lifraw.c rom41hx.c lifinit.c lifpack.c liffix.c lifmod.c lexcat71.c hx41rom.c lifheader.c lifversion.c rom41cat.c rom41lif.c in71.c out71.c inp41.c outp41.c)
+set(srclist lifdir.c lifget.c lifpurge.c liflabel.c lifrename.c liftext.c sdata.c decomp41.c liftext75.c textlif75.c regs41.c stat41.c key41.c wall41.c wcat41.c lifstat.c sdatabar.c comp41.c barprt.c barps.c rom41er.c er41rom.c prog41bar.c lifput.c textlif.c raw41lif.c lifraw.c rom41hx.c lifinit.c lifpack.c liffix.c lifmod.c lexcat71.c hx41rom.c lifheader.c lifversion.c rom41cat.c rom41lif.c in71.c out71.c inp41.c outp41.c)
 if(UNIX)
    if(NOT APPLE)
       list(APPEND srclist lifimage.c lifdump.c)
@@ -161,3 +162,7 @@ foreach (sourcefile ${srclist} )
 endforeach (sourcefile ${srclist} )
 install(FILES man/barcode.5 DESTINATION ${MANPATH}/man5)
 endif(UNIX)
+#
+# tests
+#
+add_test(NAME basic WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}/test COMMAND  "${CMAKE_SOURCE_DIR}/test/runtest" "basic" "${CMAKE_CURRENT_BINARY_DIR}" "${CMAKE_SOURCE_DIR}/xroms")
