Fix incorrect volume/flag directory entry for rom41er, rom41lif, rom41hx, cleanup NSIS update to 3.06.1, mac OS universal installer build

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,11 @@
 #
 # build file for lifutils
 #
+if (CMAKE_HOST_SYSTEM_NAME STREQUAL "Darwin")
+  set(CMAKE_OSX_ARCHITECTURES "arm64;x86_64" CACHE STRING "" FORCE)
+endif()
 project(lifutils)
-cmake_minimum_required (VERSION 2.8.4)
+cmake_minimum_required (VERSION 2.8.12)
 enable_testing()
 #
 # tweaks for Microsoft Visual C: 
